prepare for facebook login